fix: summaryjs text not fit

--- a/src/Components/ScanModes/AdvancedScan/SubSteps/Summary.css
+++ b/src/Components/ScanModes/AdvancedScan/SubSteps/Summary.css
@@ -17,12 +17,12 @@
 
 .summary-prop {
   width: 120px;
-  height: 120px;
+  height: 140px;
   background: #ffffff;
   border-radius: 10px;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
   overflow: hidden;
@@ -37,13 +37,13 @@
 }
 
 .summary-table-value {
-  margin-top: 20px;
   font-weight: bold;
   font-size: 20px;
   background: rgb(18, 61, 117);
   padding: 10px;
   border-radius: 10px;
   color: #ffffff;
+  margin-bottom: 20px;
 }
 
 .summary-icon {
